Add Stage 12 Shopify-like skin V0
